@@ -845,6 +845,10 @@ If <code>newEntry</code> is not set, copy top-level contents of <code>path</code
 <td>Always</td>
 </tr>
 <tr>
+<td>repourl</td>
+<td>Always</td>
+</tr>
+<tr>
 <td>repouuid</td>
 <td>Always</td>
 </tr>
@@ -1532,6 +1536,7 @@ mixed -&gt; true
 <li>path</li>
 <li>name</li>
 <li>url</li>
+<li>repourl</li>
 <li>repouuid</li>
 <li>revision</li>
 <li>nodekind</li>
